# Fortis

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy-pages.yml
docs/: DEMO.md  acknowledgements.md  build_bundle.py  change_notation_rules.md  default_system.md  features.md  future_directions.md  index.html  latin_to_french_roadmap.md  reconstruction_sketch.md  resumption_message.md  rule_induction_plan.md  rule_induction_sketch.md  special_characters.md  user_guide.md
examples/tonal/: README.md  SHOWCASE.md  rules.toml  rules_shift.toml  words.toml
inventories/: diacritics.toml  features.toml  letters.csv  rules.toml  sonorities.toml  syllable_parts.toml  words.toml
projects/default/: derivation_table.csv  diacritics.toml  distances.md  features.toml  output.md  rules.toml  settings.toml  words.toml
projects/halle_vaux_wolfe/: SOURCE.md  diacritics.toml  features.toml  letters.csv  rules.toml  sonorities.toml  (+3 more)
tests/: conftest.py  test_alpha.py  test_config.py  test_diacritics.py  test_feature_bundle.py  test_feature_definition.py  test_feature_inventory.py  test_feature_spec.py  test_feature_value.py  test_features.py  test_file_handling.py  test_general.py  test_inventories.py  test_letters.py  test_main.py  test_merge.py  test_models_invariant.py  test_regressions.py  test_rendering.py  test_result.py  test_rule.py  test_sonorities.py  test_syllable_parts.py  test_tonal_example.py  test_transcription.py  test_utils.py  test_value.py  test_words.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  test-engine.mjs  vite.config.js
(+195 files in other folders)
