[project]
name = "Fortis"
version = "0.1.0"
description = "A featural, autosegmental phonology engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "B", "C4", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D101", "D102", "D103"]
# Mostly one embedded HTML/CSS/JS template string, where a 100-col limit doesn't apply.
"src/fortis/analysis/dependencies.py" = ["E501"]

[tool.basedpyright]
# Pyright "standard" semantics: real type errors, without basedpyright's extra-strict checks
# (reportAny / reportExplicitAny, unknown-type propagation from untyped fixtures, unused-call-
# result, implicit-string-concatenation) which are noise for this codebase.
typeCheckingMode = "standard"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
